@@ -1,17 +1,0 @@
-if [ -n "$TERM_FRAMEBUFFER_TRY" ] && \
-   [ "$(debconf-get debian-installer/framebuffer)" = true ]; then
-	case "$(archdetect)" in
-	    mips/sb1-bcm91250a|mipsel/sb1-bcm91250a)
-		echo "Trying to enable the frame buffer..."
-		modprobe -q matroxfb_base noinit=0 >/dev/null 2>&1 || \
-		modprobe -q rivafb >/dev/null 2>&1 || \
-		modprobe -q aty128fb >/dev/null 2>&1 || \
-		modprobe -q clgenfb >/dev/null 2>&1 || \
-		modprobe -q radeonfb >/dev/null 2>&1 || \
-		modprobe -q sstfb >/dev/null 2>&1 || \
-		modprobe -q tdfxfb >/dev/null 2>&1 || \
-		modprobe -q atyfb >/dev/null 2>&1 || \
-		true
-		;;
-	esac
-fi
