@@ -5,6 +5,8 @@ rootskel (1.68) UNRELEASED; urgency=low
     partman-ext3 and usb-storage-modules).   (Closes: #498795)
   * Load required udebs for the Cobalt automatically (partman-auto,
     partman-ext2r0 and partman-ext3).
+  * Remove S40framebuffer-module-linux-mips since framebuffer on
+    SB1 machines never worked.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Sun, 14 Sep 2008 09:59:06 +0300
 
